testing/tests/melt/negative/lvalues_13.c

int main() 
{
    int n = 0;
    ((int) n) = 0; // Explicit casts convert lvalues to rvalues.
    return 0;
}
